--- a/AlexNet/AlexNet.ipynb
+++ b/AlexNet/AlexNet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNcyFlv88REetjERCCyVTHS",
+      "authorship_tag": "ABX9TyNkJGYgIpgPKdcIyKJhi6yI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -532,49 +532,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gM_it2erCRrJ",
-        "outputId": "a41aa7d9-b1aa-42f1-c3dc-0e875f99bbe1"
+        "outputId": "c6ad3fdd-6335-4263-d355-9eb5404c231a"
       },
-      "execution_count": 89,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "torch.Size([3, 224, 224])"
+              "torch.Size([3, 227, 227])"
             ]
           },
           "metadata": {},
-          "execution_count": 89
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "lrn = nn.LocalResponseNorm(2)\n",
-        "signal_2d = torch.randn(32, 5, 24, 24)\n",
-        "signal_4d = torch.randn(16, 5, 7, 7, 7, 7)\n",
-        "output_2d = lrn(signal_2d)\n",
-        "output_4d = lrn(signal_4d)\n",
-        "print(signal_2d.shape, output_2d.shape)\n",
-        "print(signal_4d.shape, output_4d.shape)"
-      ],
-      "metadata": {
-        "id": "sgjs7yLaCx0x",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "0b153631-3d0d-4121-f258-99d05f839cde"
-      },
-      "execution_count": 90,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "torch.Size([32, 5, 24, 24]) torch.Size([32, 5, 24, 24])\n",
-            "torch.Size([16, 5, 7, 7, 7, 7]) torch.Size([16, 5, 7, 7, 7, 7])\n"
-          ]
+          "execution_count": 121
         }
       ]
     },
@@ -597,7 +567,6 @@
         "\n",
         "        self.conv1 = nn.Conv2d(in_channels=3, out_channels=96, kernel_size=11, stride=4)\n",
         "        self.conv2 = nn.Conv2d(in_channels=96, out_channels=256, kernel_size=5)\n",
-        "\n",
         "        self.conv3 = nn.Conv2d(in_channels=256, out_channels=384, kernel_size=3)\n",
         "        self.conv4 = nn.Conv2d(in_channels=384, out_channels=384, kernel_size=3)\n",
         "        self.conv5 = nn.Conv2d(in_channels=384, out_channels=256, kernel_size=3)\n",
@@ -610,39 +579,54 @@
         "        first_layer_conv = self.conv1(x)\n",
         "        first_layer_relu = self.relu(first_layer_conv)\n",
         "        first_layer_norm = self.resp_norm_l1(first_layer_relu)\n",
+        "        # before pool: 55*55*96\n",
         "        first_layer_pool = self.pool(first_layer_norm)\n",
+        "        # after pool: 27*27*96\n",
         "\n",
         "        second_layer_conv = self.conv2(first_layer_pool)\n",
         "        second_layer_relu = self.relu(second_layer_conv)\n",
         "        second_layer_norm = self.resp_norm_l2(second_layer_relu)\n",
+        "        # 23*23*256\n",
         "        second_layer_out = F.pad(input=second_layer_norm, pad=(2, 2, 2, 2), mode='constant', value=0)\n",
+        "        # 25*25*256\n",
         "        second_layer_out = self.pool(second_layer_out)\n",
+        "        # 13*13*256\n",
         "\n",
         "\n",
         "        third_layer_conv = self.conv3(second_layer_out)\n",
         "        third_layer_relu = self.relu(third_layer_conv)\n",
+        "        # 11*11*384\n",
         "        third_layer_out = F.pad(input=third_layer_relu, pad=(1, 1, 1, 1), mode='constant', value=0)\n",
+        "        # 13*13*384\n",
         "\n",
         "        fourth_conv = self.conv4(third_layer_out)\n",
         "        fourth_relu = self.relu(fourth_conv)\n",
+        "        # 11*11*384\n",
         "        fourth_layer_out = F.pad(input=fourth_relu, pad=(1, 1, 1, 1), mode='constant', value=0)\n",
+        "        # 13*13*384\n",
         "\n",
-        "        fifth_conv = self.conv5(fourth_relu)\n",
+        "        fifth_conv = self.conv5(fourth_layer_out)\n",
         "        fifth_relu = self.relu(fifth_conv)\n",
-        "        fifth_layer_out = F.pad(input=fifth_relu, pad=(2, 2, 2, 2), mode='constant', value=0)\n",
-        "        fifth_layer_out = self.pool(fifth_layer_out)\n",
-        "\n",
+        "        # 11*11*256\n",
+        "        fifth_layer_pad = F.pad(input=fifth_relu, pad=(2, 2, 2, 2), mode='constant', value=0)\n",
+        "        # 13*13*256\n",
+        "        fifth_layer_out = self.pool(fifth_layer_pad)\n",
+        "        # 6*6*256\n",
         "\n",
         "        flattened = self.flatten(fifth_layer_out)\n",
-        "        fc1_out = self.fc1(fifth_layer_out)\n",
+        "        # 1*9216\n",
+        "        fc1_out = self.fc1(flattened)\n",
         "        fc1_out = self.relu(fc1_out)\n",
+        "        # 4096\n",
         "        dropout = self.dropout(fc1_out)\n",
         "\n",
         "        fc2_out = self.fc2(fc1_out)\n",
         "        fc2_out = self.relu(fc2_out)\n",
+        "        # 4096\n",
         "        dropout = self.dropout(fc2_out)\n",
         "\n",
         "        fc3_out = self.fc3(fc2_out)\n",
+        "        # 1000\n",
         "\n",
         "        return x\n",
         "\n",
@@ -660,16 +644,16 @@
         "  else:\n",
         "    print(f\"Layer {index} bias: {params.numel()}\\n\")\n",
         "\n",
-        "print(total_params)"
+        "print(\"Total Params:\", total_params)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yU3VfC3cH6Bl",
-        "outputId": "9f700886-8ac8-4d9c-bd9a-9709b37801c1"
+        "outputId": "b3774c2d-eb95-4323-a746-f62b43e1c8ab"
       },
-      "execution_count": 120,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,18 +683,47 @@
             "Layer 8 weight: 4096000\n",
             "Layer 8 bias: 1000\n",
             "\n",
-            "62378344\n"
+            "Total Params: 62378344\n"
           ]
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Parameter Calculation:\n",
+        "  - **Formulation:** X\\*Y\\*Current Channels\\*Filters + Bias(=new Filters)\n",
+        "  - Input Image: 227 * 227 \\* 3\n",
+        "\n",
+        "  - **Convolutional Layers:**\n",
+        "    - 1st Layer = 11 \\* 11 \\* 3 \\* 96 + 96 = 34,848 + b\n",
+        "    - 2nd Layer = 5 \\* 5 \\* 96 \\* 256 + 256 = 614,400 + b\n",
+        "    - 3rd Layer = 3 \\* 3 \\* 256 \\* 384 + 384 = 884,736 + b\n",
+        "    - 4th Layer = 3 \\* 3 \\* 384 \\* 384 + 384 = 1,327,104 + b\n",
+        "    - 5th Layer = 3 \\* 3 \\* 384 \\* 256 + 256 = 884,736 + b\n",
+        "\n",
+        "  - **Fully Connected Layers:**\n",
+        "    - 6th Layer = 9216 * 4096 + 4096 = 37,748,736 + b\n",
+        "    - 7th Layer = 4096 * 4096 + 4096 = 16,777,216 + b\n",
+        "    - 8th Layer = 4096 * 1000 + 1000 = 4,096,000 + b\n",
+        "\n",
+        ">**Total with bias:** 62,37,8344\n",
+        "\n",
+        "For the 6th layer input (9216), the output tensor of the 5th layer should be flattened (converted into a single dimensional tensor).\n",
+        "\n",
+        "So, if calculated, we will get ((13-3/2)+1 or, 6) 6\\*6\\*256 dimensional tensor, which after flattening becomes, 1x9216 dimensional tensor."
+      ],
+      "metadata": {
+        "id": "aXwwydh2lwKj"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "4Py0uxtWHXZ_"
+        "id": "fqHcWL17rztK"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     }
   ]
